# skeletonbasedreconstruction

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  THANKS.txt
cmake/Modules/: FindARToolKit5.cmake  FindEIGEN.cmake  FindNLOPT.cmake  FindVoroPlusPlus.cmake
ressources/recsamples/object1/: cam1.xml  cam2.xml
src/: CMakeLists.txt
src/demos/: CMakeLists.txt
src/demos/demo_bspline/: CMakeLists.txt  main.cpp
src/demos/demo_env3d/: CMakeLists.txt  main.cpp
src/demos/demo_skeletonization/: CMakeLists.txt  main.cpp
src/eval/: CMakeLists.txt
src/eval/eval_skeletonreconstruction/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/algorithm/: CMakeLists.txt
src/lib/algorithm/evaluation/: ReprojError.cpp  ReprojError.h
src/lib/algorithm/extractboundary/: MarchingSquares.cpp  MarchingSquares.h
src/lib/algorithm/fitbspline/: ComputeNodeVector.cpp  ComputeNodeVector.h  FitBspline.h  Graph2Bspline.cpp  Graph2Bspline.h
src/lib/algorithm/graphoperation/: AssociateSkeletons.cpp  AssociateSkeletons.h  ConnectedComponents.cpp  ConnectedComponents.h  SeparateBranches.cpp  SeparateBranches.h
src/lib/algorithm/matchskeletons/: SkelMatching.cpp  SkelMatching.h  SkelMatching2.cpp  SkelMatching2.h  SkelTriangulation.cpp  SkelTriangulation.h
src/lib/algorithm/projection/: SkeletonProjection.cpp  SkeletonProjection.h
src/lib/algorithm/pruning/: ScaleAxisTransform.cpp  ScaleAxisTransform.h
src/lib/algorithm/skeletonization/: VoronoiSkeleton2D.cpp  VoronoiSkeleton2D.h
src/lib/algorithm/skinning/: ContinuousSkinning.cpp  ContinuousSkinning.h  Filling.cpp  Filling.h
src/lib/boundary/: Boundary.h  CMakeLists.txt  DiscreteBoundary.h  DiscreteBoundary2.cpp  DiscreteBoundary2.h  DiscreteBoundary3.cpp  DiscreteBoundary3.h
src/lib/camera/: CMakeLists.txt  Camera.cpp  Camera.h  Extrinsics.cpp  Extrinsics.h  Intrinsics.cpp  Intrinsics.h  OrthoCam.cpp  OrthoCam.h  PinHole.cpp  PinHole.h
src/lib/mathtools/: CMakeLists.txt  static_declarations.cpp
src/lib/mathtools/affine/: Frame.cpp  Frame.cxx  Frame.h  Point.h
src/lib/mathtools/application/: AffineFun.h  Application.cxx  Application.h  Bspline.cpp  Bspline.h  BsplineUtils.cpp  BsplineUtils.h  Compositor.h  Coord2Homog.h  LinearApp.h  Nurbs.h
src/lib/mathtools/geometry/euclidian/: HyperCircle.h  HyperEllipse.h  HyperPlane.h  HyperSphere.h  Intersection.h  Line.h  LineTriangulation.h  Projection.h
src/lib/mathtools/vectorial/: Basis.cpp  Basis.cxx  Basis.h
src/lib/shape/: CMakeLists.txt  DiscreteShape.h  DiscreteShape2.cpp  ImplicitShape.h
src/lib/skeleton/: CMakeLists.txt  ComposedCurveSkeleton.h  ContinuousBranch.h  GraphBranch.h  GraphCurveSkeleton.h  ReconstructionBranch.cpp  ReconstructionBranch.h  Skeleton.h  Skeletons.h
src/lib/skeleton/model/: Classic.h  MetaModel.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h  Projective.cpp  Projective.h
src/mathtools/application/: Application.h  Bspline.h  Compositor.h  Curve.h  LinearApp.h
src/mathtools/vectorial/: Basis.h
src/skeleton/: Skeleton.h
src/skeleton/model/: Classic.h  MetaModel.h  Projective.h
src/soft/: CMakeLists.txt
src/soft/soft_acquisitions/: CMakeLists.txt  main.cpp
src/soft/soft_skeletonreconstruction/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt
src/tests/test_algos/: CMakeLists.txt  main.cpp
src/tests/test_drawshape/: CMakeLists.txt  main.cpp
src/tests/test_marchingsquares/: CMakeLists.txt  main.cpp
src/tests/test_mathtools/: CMakeLists.txt  main.cpp
src/tests/test_skeleton/: CMakeLists.txt  main.cpp
src/unittest/: CMakeLists.txt
src/unittest/test_mathtools/: CMakeLists.txt  main.cpp
src/unittest/test_skeleton/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  DrawShape.cpp  DrawShape.h
src/utils/display3d/: CMakeLists.txt  Display3D.cpp  Display3D.h  DisplayBoundary.cpp  DisplayBoundary.h  DisplayCamera.cpp  DisplayCamera.h  DisplayClass.cpp  DisplayClass.h  DisplayFrame.cpp  DisplayFrame.h  DisplaySkeleton.cpp  DisplaySkeleton.h
src/utils/displayopencv/: CMakeLists.txt  DisplayBoundaryOCV.cpp  DisplayBoundaryOCV.h  DisplayBsplineOCV.cpp  DisplayBsplineOCV.h  DisplayShapeOCV.cpp  DisplayShapeOCV.h  DisplaySkeletonOCV.cpp  DisplaySkeletonOCV.h
src/utils/fileio/: BoundaryFile.cpp  BoundaryFile.h  CMakeLists.txt  CameraFile.cpp  CameraFile.h  ExtClickFile.cpp  ExtClickFile.h  RecSkelFile.cpp  RecSkelFile.h
src/utils/tracking/: CMakeLists.txt  ImagesAcquisition.cpp  ImagesAcquisition.h  Tracker.cpp  Tracker.h
src/utils/userinput/: CMakeLists.txt  ClickSkelNode.cpp  ClickSkelNode.h  ClickWindow.cpp  ClickWindow.h  DrawShape.cpp  DrawShape.h
